# cpp_labs

./: CMakeLists.txt
lab1/: funcs.cpp  funcs.h  lab1.cpp
lab2/: lab2.cpp  stack.cpp  stack.h
lab3/: complex.cpp  complex.h  lab3.cpp  set.cpp  set.h
lab4/: eqTriangle.cpp  eqTriangle.h  lab4.cpp  parallelogram.cpp  parallelogram.h  superclass.h
lab5/: lab5.cpp  stack.h
lab6/: MyFuncs.h  lab6.cpp
lab7/: CircularBuffer.h  lab7.cpp
